# firestarter

./: Cargo.toml  build.rs  firestarter.exe.manifest
src/: main.rs
